--- a/interactive-rating-component/static/styles.css
+++ b/interactive-rating-component/static/styles.css
@@ -27,6 +27,8 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul, button {
   font-family: 'Overpass', sans-serif;
 }
 
+/* CSS reset end */
+
 body {
   background-color: var(--darker-blue);
   color: var(--white);
